# periwinkle-api

./: .env.example  README.md  pyproject.toml
app/api/: main.py
app/api/endpoints/: hello.py
app/core/: app.py  config.py
