[project]
name = "noneaway-api"
version = "0.1.0"
description = "API backend for Noneaway"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "fastapi[full]>=0.111.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.30.6",
    "pydantic[email]>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "supabase>=2.7.4",
    "pre-commit>=4.1.0",
    "ruff>=0.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest-dotenv>=0.5.2",
    "pytest>=8.3.2",
    "faker>=28.0.0",
    "python-semantic-release>=9.8.5",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
]
